--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
-name = "rust-game-physics"
+name = "game-physics"
 version = "0.1.0"
 authors = ["bumzack <bumzacktrara@gmail.com>"]
 edition = "2018"
+
+[dependencies]
+math  = {path =  "../math" }
